--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
+    "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^10.3.7",
     "next": "11.1.2",
     "postcss": "^8.3.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4",
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
